# auth-server

./: .gitignore  Cargo.toml  README.md
src/: Settings.example.toml  go.mod  go.sum  main.go  main.rs  models.rs  routes.rs  services.rs
src/models/: interfaces.go  user.go
src/routes/: handlers.go  mod.rs
src/services/: interfaces.go  mod.go  mod.rs  redis.go  server.go  structs.rs  tests.rs  traits.rs
src/utils/: bcrypt.go  jwt.go  mod.go
