[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = "0.16.0"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json", "uuid"] }
redis = "0.21.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.56"
config = "0.13.1"
bcrypt = "0.12.1"
lazy_static = "1.4.0"
